# rust-ipv4heatmap

./: .gitignore  Cargo.toml  README.md  README_.md  bom.xml  colors.rs  justfile  labels.txt  outlines.txt  shades.txt
.github/: release-bins.yml
.github/workflows/: rust-project-check.yml
docs/: .rustc_info.json  .rustdoc_fingerprint.json
docs/debug/.fingerprint/ab_glyph_rasterizer-1df68ffdd109e97f/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
docs/debug/.fingerprint/ab_glyph_rasterizer-3bf0ebf2c9854048/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
docs/debug/.fingerprint/adler-3f0ef37a220a3dec/: lib-adler  lib-adler.json
docs/debug/.fingerprint/adler-ee004c861d834dfe/: lib-adler  lib-adler.json
docs/debug/.fingerprint/ahash-203c368f1c71b0b0/: lib-ahash  lib-ahash.json
docs/debug/.fingerprint/ahash-857c301efbacdc35/: run-build-script-build-script-build  run-build-script-build-script-build.json
docs/debug/.fingerprint/ahash-8dc18f8d33529380/: run-build-script-build-script-build  run-build-script-build-script-build.json
docs/debug/.fingerprint/ahash-8f0ad32a0e56b7b5/: lib-ahash  lib-ahash.json
docs/debug/.fingerprint/ahash-a2d50d4b6b37a560/: build-script-build-script-build  build-script-build-script-build.json
docs/debug/.fingerprint/ahash-fd96d6157b5fc5dc/: build-script-build-script-build  build-script-build-script-build.json
docs/debug/.fingerprint/anyhow-1249c78c7c4238b1/: run-build-script-build-script-build  run-build-script-build-script-build.json
docs/debug/.fingerprint/anyhow-41f72fad98297c86/: build-script-build-script-build  build-script-build-script-build.json
docs/debug/.fingerprint/anyhow-66fb1f3df5f51d04/: lib-anyhow  lib-anyhow.json
docs/debug/.fingerprint/approx-13c6c318c26a5eba/: lib-approx  lib-approx.json
docs/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/doc/ipv4_heatmap/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
extras/: boxes.txt  build-colors.r  class-labels.txt  class-outlines.txt  dot-embed-stylesheet.R  dot-style.css  ge.json  iana-labels.txt  iana-modern-convert.R  iana-modern.csv  iana-modern.json  iana-outlines.txt  iana.json  infra-and-slash-8.json  mask-labels.json
src/: annotate.rs  annotations.rs  colors.rs  crop.rs  fonts.rs  heatmap.rs  labels.rs  main.rs  mask.rs  outlines.rs  prefixes.rs  shades.rs  utils.rs
(+992 files in other folders)
