[package]
name = "ipv4-heatmap"
authors = [ "boB Rudis (@hrbrmstr)" ]
description = "Generate an IPv4 12th order Hilbert Heatmap from a file of IPv4 addresses."
readme = "README.md"
license = "MIT"
categories = ["data-visualization", "command-line-interface"]
keywords = ["cli", "ipaddress", "ipv4", "datavis", "hilbert"]
homepage = "https://github.com/hrbrmstr/rust-ipv4-heatmap"
repository = "https://github.com/hrbrmstr/rust-ipv4-heatmap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
image = "0.24.3"
imageproc = "0.23.0"
hex_color = "2.0.0"
cidr = "0.2.1"
rusttype = "0.9.2"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
conv = "0.3.3"
#nsvg = "0.5.1"
#https://github.com/nickbrowne/nsvg