[package]
name = "ipv4-heatmap"
authors = [ "boB Rudis (@hrbrmstr)" ]
description = "Generate an IPv4 12th order Hilbert Heatmap from a file of IPv4 addresses."
readme = "README.md"
license = "MIT"
categories = ["data-visualization", "command-line-utilities"]
keywords = ["cli", "ipaddress", "ipv4", "datavis", "hilbert"]
homepage = "https://github.com/hrbrmstr/rust-ipv4-heatmap"
repository = "https://github.com/hrbrmstr/rust-ipv4-heatmap"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
hex_color = "2.0.0"
cidr = "0.2.1"
rusttype = "0.9.2"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
conv = "0.3.3"
ril = { git = "https://github.com/jay3332/ril", features = ["all"] }
# ril = { version = "0.4.0", features = ["all"] }
colorgrad = "0.6.1"
lazy_static = "1.4.0"
anyhow = "1.0.65"
#nsvg = "0.5.1"
#https://github.com/nickbrowne/nsvg

[profile.release]
opt-level = 3
